nestjs-yaml/nestjs-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-cluster-ip-service
  namespace: nestjs
spec:
  type: ClusterIP
  selector:
    app: nestjs-deployment
  ports:
    - port: 3000
      targetPort: 3000
