nestjs-yaml/nestjs-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nestjs
  name: nestjs-nodeport-service
  namespace: nestjs
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    # nodePort: 30333 # กำหนดหมายเลข NodePort (30000-32767)
  selector:
    matchLabels: 
      app: nestjs-deployment
  type: NodePort # เพิ่มเติมในส่วนของประเภทให้เป็น NodePort
